# ratatouille

./: .gitignore  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: docs.yml  licenses.yml  release.yml
platform/: Dockerfile  THIRD-PARTY-NOTICES.md
portal/: Dockerfile  THIRD-PARTY-NOTICES.md  package-lock.json
query/: Dockerfile  THIRD-PARTY-NOTICES.md  pyproject.toml
runner/: Dockerfile  THIRD-PARTY-NOTICES.md  pyproject.toml
scripts/: Dockerfile.licenses  combine-licenses.py  generate-licenses.sh
sdk-typescript/: THIRD-PARTY-NOTICES.md  package-lock.json  package.json
website/: THIRD-PARTY-NOTICES.md
website/components/: license-table.tsx
website/data/: licenses.json
website/pages/: index.mdx
website/pages/contributing/: _meta.ts  acknowledgments.mdx  architecture-decisions.mdx
website/pages/contributing/architecture/: _meta.ts  data-flow.mdx  database-schema.mdx  nessie-branching.mdx  overview.mdx  pipeline-execution.mdx  plugin-system.mdx  security.mdx  services.mdx  storage-layout.mdx
website/pages/getting-started/: concepts.mdx
website/pages/getting-started/tutorial/: _meta.ts  index.mdx  part1-first-pipeline.mdx  part2-landing-zones.mdx  part3-building-layers.mdx  part4-merge-strategies.mdx  part5-quality-tests.mdx  part6-python-pipelines.mdx  part7-triggers.mdx  part8-complete-platform.mdx
website/pages/guides/: data-retention.mdx  pipeline-triggers.mdx  scheduling.mdx
website/pages/guides/best-practices/: _meta.ts  idempotent-pipelines.mdx  medallion-architecture.mdx  partitioning.mdx  pipeline-patterns.mdx  scd2-history.mdx  testing-strategy.mdx
website/pages/reference/: annotations.mdx
website/pages/self-hosting/: _meta.ts  backup-restore.mdx  docker-compose.mdx  environment-variables.mdx  monitoring.mdx  security-hardening.mdx  upgrading.mdx
