[project]
name = "rat-query"
version = "0.1.0a1"
description = "Interactive DuckDB query service for RAT data platform"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "grpcio>=1.65",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "grpcio-tools>=1.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_query"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["src/rat_query/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117", "TC001", "TC002", "TC003", "B017", "N806", "E501"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rat_query --cov-report=term-missing"
